# ecommerce_AI

./: .dockerignore  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  turbo.json
apps/backend/: .env.docker.example  .env.example  Dockerfile  celerybeat-schedule  docker-entrypoint.sh  package.json  pyproject.toml  schema.yaml
apps/backend/apps/accounts/: admin.py  jwt_serializers.py  models.py  serializers.py  test_auth.py  tests.py  views.py
apps/backend/apps/accounts/migrations/: 0001_initial.py
apps/backend/apps/cart/: admin.py  models.py  serializers.py  services.py  test_merge.py  tests.py  views.py
apps/backend/apps/cart/migrations/: 0001_initial.py
apps/backend/apps/catalog/: admin.py  admin_serializers.py  admin_views.py  filters.py  models.py  serializers.py  test_admin_api.py  test_api.py  tests.py  views.py
apps/backend/apps/catalog/migrations/: 0001_initial.py
apps/backend/apps/common/: demo_data.py  exceptions.py  image_validation.py  permissions.py  storage.py  test_seed.py  tests.py  throttling.py  views.py
apps/backend/apps/common/email/: base.py  context.py  factory.py  images.py  smtp.py
apps/backend/apps/notifications/: admin.py  models.py  serializers.py  services.py  tasks.py  test_notifications.py  views.py
apps/backend/apps/notifications/migrations/: 0001_initial.py
apps/backend/apps/orders/: admin.py  models.py  serializers.py  test_demo_payment.py  test_payment_security.py  test_totals.py  tests.py  views.py  webhooks.py
apps/backend/apps/orders/migrations/: 0001_initial.py  0002_order_discount_order_estimated_delivery_and_more.py  0003_order_indexes_idempotency.py  0004_rename_orders_orde_user_id_6b3f2d_idx_orders_orde_user_id_0ae59f_idx_and_more.py
apps/backend/apps/orders/payments/: base.py  demo_provider.py  factory.py  stripe_provider.py
apps/backend/apps/orders/services/: inventory.py  totals.py
apps/backend/apps/tryon/: admin.py  apps.py  models.py  serializers.py  tasks.py  test_abandonment.py  test_tryon.py  views.py
apps/backend/config/: asgi.py  celery.py  settings.py  settings_test.py  urls.py  wsgi.py
apps/backend/seed_assets/products/: .gitkeep
(+137 files in other folders)
